# LarkMemoryCore

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.env  models.json.example  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api_server/: __init__.py  app.py  auth.py  chat_template.py  grpc_client.py  logger.py  main.py  model_policy.py
api_server/core/: __init__.py  config.py  errors.py  lifecycle.py  middleware.py  rate_limit.py
api_server/dependencies/: auth.py  guards.py
api_server/domain/: __init__.py  chat_template.py  model_policy.py
api_server/infra/: grpc_client.py  logger.py
api_server/proto/: __init__.py
api_server/routers/: __init__.py  admin.py  inference.py  memory.py  models.py  root_health.py
api_server/schemas/: common.py  memory.py  requests.py  responses.py
api_server/services/: __init__.py  backend_service.py  inference_service.py  memory_service.py  metrics_service.py  model_service.py
benchmarks/: real_inference_benchmark.py
competition/feishu_office/: README.md  __init__.py  build_dataset.py  dataset_pipeline.py  evaluate_models.py  requirements-train.txt  source_manifest.json  train_qlora.py  validate_dataset.py
competition/feishu_office/data/: corpus.jsonl  dataset_manifest.json  quality_report.json  test.jsonl  train.jsonl  validation.jsonl
competition/feishu_office/runtime/: feishu_office_hf_cli.py  feishu_office_hf_daemon.py
compute_server/: CMakeLists.txt
compute_server/cmake/: LarkMemoryCoreDependencies.cmake  LarkMemoryCoreProto.cmake  LarkMemoryCoreTests.cmake  RuyiDependencies.cmake  RuyiProto.cmake  RuyiTests.cmake
compute_server/src/: ComputeFunctions.cpp  ComputeFunctions.h  ComputeSemaphore.cpp  ComputeSemaphore.h  ComputeServiceImpl.cpp  ComputeServiceImpl.h  Main.cpp  ModelConfig.cpp  ModelConfig.h  StructuredLogger.cpp  StructuredLogger.h  TokenCounter.cpp  TokenCounter.h
crates/lark-memory-core/: Cargo.toml
crates/lark-memory-core/src/: config.rs  lib.rs  model_config.rs
crates/lark-memory-core/tests/: model_config_contract.rs
deploy/caddy/: Caddyfile
deploy/monitoring/: grafana-dashboard.json  prometheus.yml
deploy/systemd-user/: lark-memory-api.service  lark-memory-compute.service  lark-memory-core.target  lark-memory-proxy.service  ruyi-api.service  ruyi-compute.service  ruyi-proxy.service  ruyi-serving.target
docs/: README.md  competition-feishu-office-dataset.md  competition-feishu-office-demo.md  competition-feishu-office-effect-report.md  competition-feishu-office-reproduction.md  competition-feishu-office-training-report.md  memory-benchmark-report.md  memory-definition-architecture-whitepaper.md  models.schema.json  openclaw-feishu-acceptance-matrix.md  openclaw-feishu-log-checks.md  openclaw-feishu-runbook.md  openclaw-feishu-verification-note-2026-04-13.md  openclaw-feishu-verification-note-2026-04-18.md  openclaw-feishu-verification-note-template.md  validation-gates.md
examples/: curl_chat_completion.sh  http_chat_completion.py  openai_sdk_compat.py  openclaw_config.jsonc
examples/javascript/: openai_sdk_compat.mjs  package.json
examples/postman/: lark-memory-core.postman_collection.json  ruyi-serving.postman_collection.json
ops/: common.sh  feishu_office_competition_common.sh  feishu_office_competition_preflight.sh  feishu_office_competition_start.sh  feishu_office_competition_stop.sh  feishu_office_train_env.sh  install_user_services.sh  logs.sh  openclaw_feishu_buddy_ascend_check.sh  preflight.sh  python_cmd.sh  quickstart_local.sh  restart.sh  runtime_paths.py  smoke_prod.sh  start.sh  status.sh  stop.sh  systemd_layout.py
proto/: compute.proto
tests/: mock_grpc_server.py
tests/cpp/: test_compute_functions.cpp  test_compute_semaphore.cpp  test_compute_service_impl.cpp  test_model_validation.cpp  test_structured_logger.cpp  test_token_counter.cpp
tests/integration_real/: test_real_dataset_inference.py
tests/python/: openclaw_feishu_cases.py  test_api_contracts.py  test_api_key_auth.py  test_chat_template.py  test_completion_prompt_list.py  test_docs_and_examples.py  test_feishu_office_dataset_contracts.py  test_feishu_office_runtime_contracts.py  test_graceful_shutdown.py  test_grpc_contracts.py  test_grpc_retry.py  test_grpc_tls.py  test_input_validation.py  test_memory_engine.py  test_model_policy.py  test_model_source_of_truth.py  test_production_behaviors.py  test_rate_limiter.py  test_readiness.py  test_runtime_paths.py  test_stream_error_handling.py  test_structured_logger.py  test_systemd_layout.py
tests/real_data/: huangyiheng_2026_02_real.jsonl
